First pass at building the UI - rework components for `bookmark-list` - add bulk actions (placeholder from topics) - fixed css for alignment

--- a/app/assets/stylesheets/desktop/topic-list.scss
+++ b/app/assets/stylesheets/desktop/topic-list.scss
@@ -42,6 +42,7 @@
   .topic-list-data.bulk-select {
     padding: 0;
     width: 30px;
+    text-align: center;
     label {
       margin: 0px;
       padding: 12px 10px 16px 10px;
